--- a/scss/object/component/_c-btn.scss
+++ b/scss/object/component/_c-btn.scss
@@ -1,2 +1,23 @@
 @use '../../foundation/mixin' as *;
 @use '../../foundation/variable'as *;
+
+.c-btn {
+ background-color: $color-red;
+ color:#fff;
+ border: 0.1rem solid transparent;
+ transition:  background-color .4s, color .4s, border .4s;
+ 
+}
+
+.c-btn:hover {
+ background-color: #fff;
+ color: $color-red;
+ border: 0.1rem solid $color-red;
+}
+
+.c-btn--header { 
+ margin-left: 3.3rem;
+ padding: 0.6rem 3rem 0.6rem;
+ font-size: 1.5rem;
+ line-height: calc(33 / 15);
+}
