--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ a {
 img {
   width: 100%;
   height: auto;
-  display: none;
+  display: block;
 }
 
 @media (min-width: 768px) {
@@ -79,6 +79,8 @@ img {
 }
 
 .l-header__logo {
+  padding: 0.4rem 0 0 0;
+  background-color: aqua;
   height: inherit;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -92,20 +94,24 @@ img {
 }
 
 .l-header-logo__img {
+  padding-top: 0.4rem;
   width: 3.3rem;
 }
 @media only screen and (max-width: 767px) {
   .l-header-logo__img {
+    padding-top: 0.7rem;
     width: 2rem;
   }
 }
 
 .l-header-logo__text {
-  font-size: 2.3re;
+  padding: 0 0 0 0.9rem;
+  font-size: 2rem;
   line-height: 1.15;
 }
 @media only screen and (max-width: 767px) {
   .l-header-logo__text {
+    padding: -0.6rem 0 0 0.7rem;
     font-size: 1.3rem;
     line-height: 1.0769230769;
   }
@@ -120,4 +126,635 @@ img {
     font-size: 1.3rem;
     line-height: 1.0769230769;
   }
+}
+
+.l-header__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.l-header__nav {
+  height: inherit;
+}
+@media only screen and (max-width: 767px) {
+  .l-header__nav {
+    position: fixed;
+    top: 5rem;
+    right: -120%;
+    -webkit-transition: right 0.4s;
+    transition: right 0.4s;
+  }
+}
+
+.l-header__nav.active {
+  right: 0;
+}
+
+.l-header__lists {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-column-gap: 3.3rem;
+     -moz-column-gap: 3.3rem;
+          column-gap: 3.3rem;
+}
+@media only screen and (max-width: 767px) {
+  .l-header__lists {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.l-header__list a {
+  background-color: aqua;
+  display: block;
+  font-size: 1.7rem;
+  line-height: 1.9411764706;
+  padding: 2.5rem 0 2.2rem 0;
+  -webkit-transition: opacity 0.4s;
+  transition: opacity 0.4s;
+  position: relative;
+}
+@media only screen and (max-width: 767px) {
+  .l-header__list a {
+    background-color: #bc0000;
+    width: 30rem;
+    height: 5.8rem;
+    color: #fff;
+    font-size: 1.8rem;
+    line-height: 1;
+    padding: 2.2rem 0 1.8rem 2rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .l-header__list a:hover {
+    opacity: 0.5;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .l-header__list a:hover {
+    background-color: #000;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .l-header__list a::before {
+    content: "";
+    background-color: #000;
+    width: 100%;
+    height: 0.2rem;
+    position: absolute;
+    left: 0;
+    bottom: 2.5rem;
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+    -webkit-transform-origin: left;
+            transform-origin: left;
+    -webkit-transition: -webkit-transform 0.4s;
+    transition: -webkit-transform 0.4s;
+    transition: transform 0.4s;
+    transition: transform 0.4s, -webkit-transform 0.4s;
+  }
+}
+
+.l-header__list a:hover::before {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
+.l-inner {
+  max-width: 94rem;
+  width: 100%;
+  padding-inline: 3rem;
+  margin-inline: auto;
+}
+@media only screen and (max-width: 767px) {
+  .l-inner {
+    padding-inline: 2rem;
+  }
+}
+
+.c-btn {
+  background-color: #bc0000;
+  color: #fff;
+  border: 0.1rem solid transparent;
+  -webkit-transition: background-color 0.4s, color 0.4s, border 0.4s;
+  transition: background-color 0.4s, color 0.4s, border 0.4s;
+}
+
+.c-btn:hover {
+  background-color: #fff;
+  color: #bc0000;
+  border: 0.1rem solid #bc0000;
+}
+
+.c-btn--header {
+  margin-left: 3.3rem;
+  padding: 0.6rem 3rem 0.6rem;
+  font-size: 1.5rem;
+  line-height: 2.2;
+}
+
+.c-ham {
+  background-color: #bc0000;
+  width: 7.1rem;
+  height: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.c-ham__inner {
+  width: 3.2rem;
+  height: 2.8rem;
+  position: relative;
+}
+
+.c-ham__inner span {
+  position: absolute;
+  width: 100%;
+  height: 0.4rem;
+  border-radius: 0.2rem;
+  background-color: #fff;
+  position: absolute;
+  left: 0;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.c-ham__inner span:nth-of-type(1) {
+  top: 0;
+}
+
+.c-ham__inner span:nth-of-type(2) {
+  top: 1.2rem;
+}
+
+.c-ham__inner span:nth-of-type(3) {
+  top: 2.4rem;
+}
+
+.c-ham.active .c-ham__inner span:nth-of-type(1) {
+  top: 1.2rem;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.c-ham.active .c-ham__inner span:nth-of-type(2) {
+  display: none;
+}
+
+.c-ham.active .c-ham__inner span:nth-of-type(3) {
+  top: 1.2rem;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.c-head {
+  width: 100%;
+  text-align: center;
+  font-size: 3rem;
+  line-height: 1.6666666667;
+}
+@media only screen and (max-width: 767px) {
+  .c-head {
+    font-size: 2.5rem;
+    line-height: 1.6;
+  }
+}
+
+.c-head--wh {
+  color: #fff;
+}
+
+.p-top__fv {
+  width: 100%;
+}
+
+.p-top-fv__inner {
+  width: 100%;
+  position: relative;
+}
+
+.p-top-fv__img {
+  width: 100%;
+  position: relative;
+}
+
+.p-top-fv__img::before {
+  content: "";
+  background-color: rgba(80, 80, 80, 0.502);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+
+.p-top-fv__text {
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 4rem;
+  line-height: 1.5;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+@media only screen and (max-width: 767px) {
+  .p-top-fv__text {
+    font-size: 3rem;
+    line-height: 1.6666666667;
+    top: 52%;
+    left: 50%;
+  }
+}
+
+.p-top__concept {
+  padding-block: 6.6rem 5.5rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top__concept {
+    padding-block: 4.5rem 3.4rem;
+  }
+}
+
+.p-top-concept__head {
+  width: 100%;
+  text-align: center;
+  color: #bc0000;
+  font-size: 3.5rem;
+  line-height: 1.4285714286;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-concept__head {
+    font-size: 2.5rem;
+    line-height: 1.6;
+  }
+}
+
+.p-top-concept__text {
+  width: 100%;
+  text-align: center;
+  padding-block: 1.7rem 3.4rem;
+  font-size: 1.8rem;
+  line-height: 1.6666666667;
+  font-weight: 500;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-concept__text {
+    padding-block: 0.7rem 2rem;
+  }
+}
+
+.p-top-concept__img {
+  width: 100%;
+}
+
+.p-top-concept__diagram {
+  padding-top: 1.7rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 1.9rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-concept__diagram {
+    padding-top: 3.3rem;
+  }
+}
+
+.p-top-concept-diagram__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.p-top-concept-diagram-row__pri {
+  background-color: aqua;
+  width: 40%;
+  text-align: right;
+  color: #bc0000;
+  font-size: 2.5rem;
+  line-height: 2;
+  text-transform: capitalize;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-concept-diagram-row__pri {
+    font-size: 2rem;
+    line-height: 2.5;
+  }
+}
+
+.p-top-concept-diagram-row__circle {
+  background-color: #bc0000;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 1rem;
+  margin-inline: 3rem;
+  position: relative;
+}
+
+.p-top-concept-diagram-row__circle::before {
+  content: "";
+  background-color: #bc0000;
+  width: 0.3rem;
+  height: 7rem;
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.p-top-concept-diagram-row__circle--top::before {
+  content: "";
+  background-color: #bc0000;
+  width: 0.3rem;
+  height: 5rem;
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.p-top-concept-diagram-row__circle--top::after {
+  content: "";
+  width: 2.5rem;
+  height: 2.5rem;
+  border: 0.3rem solid #bc0000;
+  border-color: transparent transparent #bc0000 #bc0000;
+  position: absolute;
+  left: -9%;
+  bottom: 3.4rem;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
+}
+
+.p-top-concept-diagram-row__sec {
+  background-color: aqua;
+  width: 40%;
+  font-weight: 500;
+  font-size: 2.3rem;
+  line-height: 2.1739130435;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-concept-diagram-row__sec {
+    font-size: 2rem;
+    line-height: 2.5;
+  }
+}
+
+.p-top__message {
+  padding-block: 6.8rem 6rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top__message {
+    padding-block: 4.9rem 4rem;
+  }
+}
+
+.p-top-message__text {
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 1.8rem;
+  line-height: 1.6666666667;
+  padding-top: 3rem;
+  font-weight: 500;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-message__text {
+    padding-top: 1.4rem;
+  }
+}
+
+.p-top__reason {
+  padding-block: 6.4rem 4.8rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top__reason {
+    padding-block: 4.9rem 3.8rem;
+  }
+}
+
+.p-top-reason__block {
+  padding-top: 2.8rem;
+  margin-bottom: 2.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-reason__block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 3.6rem;
+    margin-bottom: 0.1rem;
+  }
+}
+
+.p-top-reason-block__img {
+  width: 35rem;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-reason-block__img {
+    width: 100%;
+  }
+}
+
+.p-top-reason-block__head {
+  border-bottom: 0.2rem solid #bc0000;
+  font-size: 2.2rem;
+  line-height: 1.5;
+  padding: 0.7rem 0 1.2rem 5rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-reason-block__head {
+    padding: 3rem 0 1rem 0;
+    font-size: 2rem;
+    line-height: 1.5;
+  }
+}
+
+.p-top-reason-block__text {
+  padding: 3.7rem 0 0 5rem;
+  font-size: 1.8rem;
+  line-height: 1.8333333333;
+  font-weight: 500;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-reason-block__text {
+    padding: 1.7rem 0 0 0rem;
+    font-size: 1.6rem;
+    line-height: 1.875;
+  }
+}
+
+.p-top__voice {
+  padding-block: 6.4rem 6rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top__voice {
+    padding-block: 4.6rem 5rem;
+  }
+}
+
+.p-top-voice__inner {
+  max-width: 110rem;
+  width: 100%;
+  padding-inline: 8.25rem;
+  margin: 0 auto;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-voice__inner {
+    padding-inline: 2rem;
+  }
+}
+
+.p-top-voice__lists {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 3.6rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-voice__lists {
+    padding-top: 3.9rem;
+  }
+}
+
+.p-top-voice__lists a {
+  -webkit-transition: opacity 0.4s;
+  transition: opacity 0.4s;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: -webkit-transform 0.4s;
+  transition: -webkit-transform 0.4s;
+  transition: transform 0.4s;
+  transition: transform 0.4s, -webkit-transform 0.4s;
+}
+
+.p-top-voice__lists a:hover {
+  opacity: 0.8;
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
+}
+
+.slick-arrow {
+  position: absolute;
+  top: 16rem;
+  z-index: 5;
+}
+@media only screen and (max-width: 767px) {
+  .slick-arrow {
+    top: 16.5rem;
+  }
+}
+
+.slick-prev {
+  position: absolute;
+  left: -2.6rem;
+}
+@media only screen and (max-width: 767px) {
+  .slick-prev {
+    left: 0rem;
+  }
+}
+
+.slick-next {
+  position: absolute;
+  right: -2.6rem;
+}
+@media only screen and (max-width: 767px) {
+  .slick-next {
+    right: 0rem;
+  }
+}
+
+.p-top-voice__list {
+  margin-inline: 1.75rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-voice__list {
+    margin-inline: 0;
+  }
+}
+
+.p-top-voice-list__img {
+  width: 100%;
+}
+
+.p-top-voice-list__name {
+  width: 100%;
+  text-align: center;
+  padding-block: 1.7rem 1rem;
+  color: #fff;
+  font-size: min(2.037037037vw, 22px);
+  line-height: 1.5;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-voice-list__name {
+    padding-block: 2.7rem 1rem;
+    font-size: 2.2rem;
+  }
+}
+
+.p-top-voice-list__text {
+  color: #fff;
+  font-size: min(1.6666666667vw, 18px);
+  line-height: 1.6666666667;
+  font-weight: 500;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-voice-list__text {
+    font-size: 1.8rem;
+  }
+}
+
+.u-bg-red {
+  background-color: #bc0000;
 }/*# sourceMappingURL=style.css.map */
