--- a/scss/layout/_l-header.scss
+++ b/scss/layout/_l-header.scss
@@ -22,6 +22,8 @@
 }
 
 .l-header__logo{
+ padding: 0.4rem 0 0 0;
+ background-color: aqua; 
  height: inherit;
  display: flex;
  align-items: center;
@@ -29,16 +31,20 @@
 }
 
 .l-header-logo__img {
+ padding-top: 0.4rem;
  width: 3.3rem;
  @include sp {
+  padding-top: 0.7rem;
    width: 2rem;
  }
 }
 
 .l-header-logo__text {
- font-size: 2.3re,;
+ padding: 0 0 0 0.9rem;
+ font-size: 2rem;
  line-height: calc(23 / 20);
  @include sp {
+   padding: -0.6rem 0 0 0.7rem;
    font-size: 1.3rem;
    line-height: calc(14 / 13);
  }
@@ -51,6 +57,82 @@
    font-size: 1.3rem;
    line-height: calc(14 / 13);
  }
+}
+
+.l-header__right {
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+}
+
+.l-header__nav {
+ height: inherit;
+ @include sp {
+   position: fixed;
+   top: 5rem;
+   right: -120%;
+   transition: right .4s;
+ }
+}
+
+.l-header__nav.active { 
+ right: 0;
+}
+
+.l-header__lists {
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+ column-gap: 3.3rem;
+ @include sp {
+   flex-direction: column;
+ }
+}
+
+.l-header__list a {
+ background-color: aqua;
+ display: block;
+ font-size: 1.7rem;
+ line-height: calc(33 / 17);
+ padding: 2.5rem 0 2.2rem 0;
+ transition: opacity .4s;
+ position: relative;
+ @include sp {
+  background-color: $color-red;
+  width: 30rem;
+  height: 5.8rem;
+  color: #fff;
+  font-size: 1.8rem;
+  line-height: 1;
+  padding: 2.2rem 0 1.8rem 2rem;
+ }
+}
+
+.l-header__list a:hover {
+ @include pc {
+  opacity: 0.5;
+ }
+ @include sp {
+   background-color: #000;
+ }
+}
+
+.l-header__list a::before {
+  @include pc {
+   content: '';
+   background-color: #000;
+   width: 100%;
+   height: 0.2rem;
+   position: absolute;
+   left: 0;
+   bottom: 2.5rem;
+   transform: scaleX(0);
+   transform-origin: left ;
+   transition: transform .4s;
+ }
+}
+.l-header__list a:hover::before {
+ transform: scaleX(1);
 }
 
 
