--- a/scss/layout/_l-inner.scss
+++ b/scss/layout/_l-inner.scss
@@ -1,2 +1,12 @@
 @use '../foundation/mixin' as *;
 @use '../foundation/variable'as *;
+
+.l-inner {
+ max-width: 94rem;
+ width: 100%;
+ padding-inline: 3rem;
+ margin-inline: auto;
+ @include sp {
+  padding-inline: 2rem;
+ }
+}
